--- a/mycelium/apps/import/templates/import/review.html
+++ b/mycelium/apps/import/templates/import/review.html
@@ -9,7 +9,26 @@
 {% block page_content %}
 <breadcrumb><a class="mycelium_btn" href="{% url import:list %}">Back to All Data Imports</a></breadcrumb>
 <page_title>Data Import #5 on Dec 29, 2010 at 3:55pm</page_title>
+<div class="fields_report">
+	<div class="result_header fields_header">Imported Fields:</div>
+	<div class="result_data">
+	<div class="result_data_line match">
+		<ul>
+			<li>Old Database ID</li>
+			<li>First Name</li>
+			<li>Last Name</li>
+			<li>Email Address</li>
+			<li>Address Line 1</li>
+			<li>Address Line 2</li>
+			<li>City</li>
+			<li>State</li>
+			<li>Postal Code</li>
+			<li>Age</li>
+		</ul>
+	</div>
 
+	</div>
+</div>
 <div class="report_summary">
 	<div class="total">We found 2,937 people.</div>
 	<div class="success">
