--- a/mycelium/apps/import/templates/import/_dropdown_options.html
+++ b/mycelium/apps/import/templates/import/_dropdown_options.html
@@ -1,7 +1,8 @@
 <select>
 <option {% if "unknown" = opt  %}selected{% endif %}>Please Select..</option>
 <option {% if "ignore" = opt  %}selected{% endif %}>Ignore this field </option>
-<option {% if "id" = opt  %}selected{% endif %}>GoodCloud ID</option>
+<option {% if "id" = opt  %}selected{% endif %}>Old Database ID</option>
+<option {% if "goodcloudid" = opt  %}selected{% endif %}>GoodCloud ID</option>
 <option {% if "first_name" = opt  %}selected{% endif %}>First Name</option>
 <option {% if "last_name" = opt  %}selected{% endif %}>Last Name</option>
 <option {% if "email" = opt  %}selected{% endif %}>Email Address</option>
