--- a/media/css/mycelium_elements.css
+++ b/media/css/mycelium_elements.css
@@ -124,7 +124,8 @@ add_another {
 	border: 1px solid #AAA;
 	padding: 20px;
 	color: #333;
-	overflow: auto;
+	overflow-x: hidden;
+	overflow-y: auto;
 }
 
 .mycelium_btn, input.mycelium_btn, a.mycelium_btn {
