--- a/mycelium/apps/reports/templates/reports/detail_volunteer.html
+++ b/mycelium/apps/reports/templates/reports/detail_volunteer.html
@@ -1,13 +1,12 @@
 {% extends "reports/base.html" %}
 {% block title %}Reports - Unsaved Report{% endblock %}
 {% load humanize %}
+{% block breadcrumb_links %}<a href="{% url reports:search %}">Back to All Reports</a>{% endblock %}
 {% block page_content %}
-<breadcrumb><a class="mycelium_btn" href="{% url reports:search %}">Back to All Reports</a></breadcrumb>
 <div class="right_actions">
 	<a href="#" class="mycelium_btn mycelium_grey">Saved</a>
 </div>
 <div class="title"><img src="{{MEDIA_URL}}images/report-32.png"/>Thursday Volunteer List</div>
-
 <div class="setup_phrase">Find all of the people who:</div>
 <div class="criteria_list">
 	<div class="criterium">
