consistent breadcrumbs show on all pages

--- a/media/css/mycelium_elements.css
+++ b/media/css/mycelium_elements.css
@@ -178,7 +178,8 @@ breadcrumb:hover {
 	padding: 20px;
 	color: #333;
 /*	overflow-x: inherit;
-	overflow-y: auto;*/
+	overflow-y: auto;
+*/
 }
 
 .mycelium_btn, input.mycelium_btn, a.mycelium_btn {
