--- a/mycelium/apps/import/templates/import/list.html
+++ b/mycelium/apps/import/templates/import/list.html
@@ -6,6 +6,7 @@
 
 </script>
 {% endblock %}
+{% block breadcrumb %}{% endblock %}
 {% block page_content %}
 <page_title>Data Import History</page_title>
 
