--- a/mycelium/apps/logo_maker/templates/logo_maker/list.html
+++ b/mycelium/apps/logo_maker/templates/logo_maker/list.html
@@ -17,6 +17,7 @@ function cancel_another_logo_btn_clicked() {
 }
 </script>
 {% endblock %}
+{% block breadcrumb %}{% endblock %}
 {% block page_content %}
 <page_title>Logos</page_title>
 
