--- a/mycelium/apps/mycelium_core/templates/mycelium_core/more_menu.html
+++ b/mycelium/apps/mycelium_core/templates/mycelium_core/more_menu.html
@@ -4,6 +4,7 @@
 {% block css %}{{block.super}}
 	<link rel="stylesheet" href="{{ MEDIA_URL }}css/more.css" type="text/css" media="screen" title="" charset="utf-8">
 {% endblock %}
+{% block breadcrumb %}{% endblock %}
 {% block page_content %}
 <div class="more_buttons">
 	<div class="more_row">
