--- a/mycelium/apps/people/templates/people/search.html
+++ b/mycelium/apps/people/templates/people/search.html
@@ -67,6 +67,7 @@ function open_if_only_result(e) {
 }
 </script>
 {% endblock %}
+{% block breadcrumb %}{% endblock %}
 {% block page_content %}
 <div class="main_search_box">
 	<a href="{% url people:new_person %}" class="new_person_btn mycelium_btn">New Person</a>
