--- a/mycelium/apps/reports/templates/reports/search.html
+++ b/mycelium/apps/reports/templates/reports/search.html
@@ -1,6 +1,7 @@
 {% extends "reports/base.html" %}
 {% block title %}Reports - View Saved Reports{% endblock %}
 {% load humanize %}
+{% block breadcrumb %}{% endblock %}
 {% block page_content %}
 <div class="small_search">
 	<input id="id_page_top_search" name="page_top_search" />
