--- a/media/css/people.css
+++ b/media/css/people.css
@@ -13,6 +13,15 @@ input:focus {
 #page {
 	padding: 4px;
 }
+
+breadcrumb {
+	left: -18px;
+	top: 3px;
+}
+.breadcrumb_container .triangle-l {
+    left: -27px;
+    top: 23px;
+}
 #id_search_query {
 	width: 72%;
 	margin: 6px 0px;
