--- a/mycelium/apps/import/templates/import/review.html
+++ b/mycelium/apps/import/templates/import/review.html
@@ -6,35 +6,15 @@
 
 </script>
 {% endblock %}
+{% block breadcrumb_links %}<a href="{% url import:list %}">Back to All Data Imports</a>{% endblock %}
 {% block page_content %}
-<breadcrumb><a class="mycelium_btn" href="{% url import:list %}">Back to All Data Imports</a></breadcrumb>
 <page_title>Data Import #5 on Dec 29, 2010 at 3:55pm</page_title>
-<div class="fields_report">
-	<div class="result_header fields_header">Imported Fields:</div>
-	<div class="result_data">
-	<div class="result_data_line match">
-		<ul>
-			<li>Old Database ID</li>
-			<li>First Name</li>
-			<li>Last Name</li>
-			<li>Email Address</li>
-			<li>Address Line 1</li>
-			<li>Address Line 2</li>
-			<li>City</li>
-			<li>State</li>
-			<li>Postal Code</li>
-			<li>Age</li>
-		</ul>
-	</div>
-
-	</div>
-</div>
 <div class="report_summary">
 	<div class="total">We found 2,937 people.</div>
 	<div class="success">
 		<div class="result_header success_header">We added:</div>
 		<div class="result_data">
-		<div class="result_data_line match">2,741 matched people who were already in GoodCloud, and were updated.</div>
+		<div class="result_data_line match">2,741 matched people who were already in GoodCloud, and were updated. <a href="#">See who</a></div>
 		<div class="result_data_line added">195 people were new, and were added <a href="#">See who</a></div>
 		</div>
 	</div>
@@ -44,6 +24,26 @@
 		<div class="result_data_line not_people">13 rows did not appear to be people, or had errors. <a href="#">See rows</a></div>
 		</div>
 	</div>
+	{# <div class="fields_report"> #}
+	{# 	<div class="result_header fields_header">We added data in these fields:</div> #}
+	{# 	<div class="result_data"> #}
+	{# 	<div class="result_data_line match"> #}
+	{# 		<ul> #}
+	{# 			<li>Old Database ID</li> #}
+	{# 			<li>First Name</li> #}
+	{# 			<li>Last Name</li> #}
+	{# 			<li>Email Address</li> #}
+	{# 			<li>Address Line 1</li> #}
+	{# 			<li>Address Line 2</li> #}
+	{# 			<li>City</li> #}
+	{# 			<li>State</li> #}
+	{# 			<li>Postal Code</li> #}
+	{# 			<li>Age</li> #}
+	{# 		</ul> #}
+	{# 	</div> #}
+	{#  #}
+	{# 	</div> #}
+	{# </div> #}
 </div>
 			
 {% endblock %}
