changed the reports template for active volunteers to include volunteering to match the story

--- a/mycelium/apps/reports/templates/reports/new.html
+++ b/mycelium/apps/reports/templates/reports/new.html
@@ -36,7 +36,7 @@
 	<div class="criterium">
 		<span class="additive"></span>
 		<span class="tense">have</span>
-		<span class="negator">not</span>
+		<span class="negator"></span>
 		<span class="left_side">had a volunteer shift</span>
 		<span class="operator">in the last</span>
 		<span class="right_side">
