--- a/media/css/mycelium_elements.css
+++ b/media/css/mycelium_elements.css
@@ -177,6 +177,11 @@ breadcrumb:hover {
 	border: 1px solid #AAA;
 	padding: 20px;
 	color: #333;
+	
+	-moz-box-shadow: 0px 1px 4px rgba(0,0,0,0.55);
+	-khtml-box-shadow: 0px 1px 4px rgba(0,0,0,0.55);
+	-webkit-box-shadow: 0px 1px 4px rgba(0,0,0,0.55);
+		
 /*	overflow-x: inherit;
 	overflow-y: auto;
 */
