add memcached, celery, rabbitmq, and a bad-ass SearchableItemProxy model, and what do you get? A people search results page that SCREAMS, and handles people and organizations.  Booyah.

--- a/media/css/mycelium_elements.css
+++ b/media/css/mycelium_elements.css
@@ -157,6 +157,10 @@ breadcrumb:hover {
 	border-color: transparent #003A8D transparent transparent;	
     z-index: -1;
 }
+new_object_buttons {
+	display: block;
+	padding: 10px;
+}
 #page {
 	display: block;
 	margin: 80px auto;
