--- a/mycelium/apps/people/templates/people/search.html
+++ b/mycelium/apps/people/templates/people/search.html
@@ -9,9 +9,12 @@
 {% endblock %}
 {% block page_content %}
 <div class="main_search_box">
-	<a href="{% url people:new_person %}" class="new_person_btn mycelium_btn">New Person</a>
 	<label for="id_search_query">Search:</label> <input name="search_query" id="id_search_query" />
 </div>
+<new_object_buttons>
+	<a href="{% url people:new_person %}" class="new_person_btn mycelium_btn">New Person</a>
+	<a href="{% url people:new_organization %}" class="new_organization_btn mycelium_btn">New Organization</a>	
+</new_object_buttons>
 <search_results>
 	{% include "people/_search_results.html" %}
 </search_results>
