--- a/media/css/mycelium_elements.css
+++ b/media/css/mycelium_elements.css
@@ -223,7 +223,7 @@ new_object_buttons {
 	border-color: #EEE;
 	background-color: #EEE;
 	color: #999;
-	text-shadow: 1px 1px 2px rgba(240,240,240,0.2);		
+	text-shadow: 1px 1px 2px rgba(240,240,240,0.2);
 }
 .mycelium_gray:hover, .mycelium_grey:hover {
 	border-color: #DDD;
@@ -257,4 +257,9 @@ table.record_table td {
 }
 table.striped tr.even td {
 	background-color: #F2F2F2;
+}
+save_status_and_button {
+	position: absolute;
+	right: 10px;
+	top: 4px;
 }
