--- a/media/css/mycelium_elements.css
+++ b/media/css/mycelium_elements.css
@@ -225,7 +225,7 @@ new_object_buttons {
 	color: #999;
 	text-shadow: 1px 1px 2px rgba(240,240,240,0.2);
 }
-.mycelium_gray:hover, .mycelium_grey:hover {
+.mycelium_gray:hover, .mycelium_grey:hover, input.mycelium_gray:hover, input.mycelium_grey:hover, a.mycelium_gray:hover, a.mycelium_grey:hover {
 	border-color: #DDD;
 	background-color: #DDD;
 	color: #454545;
