--- a/media/css/people.css
+++ b/media/css/people.css
@@ -5,10 +5,12 @@ input {
 	border: 1px solid #DDD;
 	padding: 0px;
 	margin: 0px;
+	border-width: 0px 0px 1px 0px;
 }
 input:focus {
 	outline-style:none;
 	border: 1px solid #3E9CFD;
+	border-width: 0px 0px 1px 0px;	
 }
 #page {
 	padding: 4px;
