--- a/mycelium/apps/people/templates/people/organization.html
+++ b/mycelium/apps/people/templates/people/organization.html
@@ -29,10 +29,10 @@ $(function(){
 			{% generic_editable_field form.name %}
 		</div>
 		{% generic_editable_field form.primary_phone_number %}
-		{% generic_editable_field form.organization_type %}
-		{% generic_editable_field form.organization_type_other_name %}
+		{# {% generic_editable_field form.organization_type %} #}
+		{# {% generic_editable_field form.organization_type_other_name %} #}
 		{% generic_editable_field_url form.website %}
-		{% generic_editable_field form.twitter_username %}		
+		{% generic_editable_field_twitter form.twitter_username %}		
 	</div>
 	<div class="address">
 		{% generic_editable_field form.line_1 %}
