pulling events.  they'll be there eventually.

--- a/mycelium/templates/mycelium_base.html
+++ b/mycelium/templates/mycelium_base.html
@@ -18,10 +18,10 @@
 	</logo>
 	<main_nav>{% spaceless %}
 		<a href="{% url people:search %}" {% if not section %}class="current"{% endif %}>People</a>
-		<a href="#">Fund{# Multiply #}</a>
-		<a href="{% url reports:search %}" class="{% if section == "reports" %}current{% endif %}" >Reports{# Yardstick #}</a>
-		<a href="#">Communicate{# Soapbox #}</a>
-		<a href="#">Events{# Shindig #}</a>
+		<a href="#">Fund</a>
+		<a href="{% url reports:search %}" class="{% if section == "reports" %}current{% endif %}" >Reports</a>
+		<a href="#">Communicate</a>
+		{# <a href="#">Events</a> #}
 		<a href="{% url core:more_menu %}" class="{% if section == "more" %}current{% endif %}">More</a>
 	{% endspaceless %}</main_nav>
 	{% endblock %}
