added activity tab.

--- a/mycelium/apps/people/templates/people/person.html
+++ b/mycelium/apps/people/templates/people/person.html
@@ -55,6 +55,7 @@ $(function(){
 	
 <div id="detail_tabs">
 	<a class="detail_tab" href="#">Conversations</a>
+	<a class="detail_tab" href="#">Activity</a>
 	<a class="detail_tab" href="#">Participant</a>
 	<a class="detail_tab current" href="#">Volunteer</a>
 	<a class="detail_tab" href="#">Donor</a>
