--- a/mycelium/apps/people/templates/people/_search_results.html
+++ b/mycelium/apps/people/templates/people/_search_results.html
@@ -1,7 +1,7 @@
 {% load pagination_tags %}
 {% if people_proxies %}
 {% autopaginate people_proxies 20 %}
-<table class="results_table">
+<table class="results_table striped">
 	<tr class="person_row header">
 		<th class="name">Name</th>
 		<th class="email">Email</th>
