--- a/mycelium/apps/people/templates/people/_search_result_row_organization.html
+++ b/mycelium/apps/people/templates/people/_search_result_row_organization.html
@@ -1,4 +1,4 @@
-<tr class="result_row person_row">
+<tr class="result_row person_row striped_row">
 	<td class="name">
 		<a href="{% url people:organization obj.pk %}">
 			<icon class="{{obj.contact_type}}" ></icon>
