--- a/mycelium/apps/people/templates/people/_add_person_to_org_results.html
+++ b/mycelium/apps/people/templates/people/_add_person_to_org_results.html
@@ -2,27 +2,32 @@
 {% if people %}
 {% autopaginate people 5 %}
 <table class="results_table striped">
-	<tr class="person_row header">
-		<th class="action"></th>
-		<th class="name">Name</th>
-		<th class="email">Email</th>
-		<th class="phone_number">Phone Number</th>
-	</tr>
+	{# <tr class="person_row header"> #}
+	{# 	<th class="action"></th> #}
+	{# 	<th class="name">Name</th> #}
+	{# 	<th class="email">Email</th> #}
+	{# 	<th class="phone_number">Phone Number</th> #}
+	{# </tr> #}
 {% for p in people %}
-<tr class="person_row header striped_row">
+<tr class="person_row header striped_row" person_pk="{{p.pk}}">
 	<td class="action"><a href="#" class="mycelium_btn select_person_to_add_btn">Add this Person</a></td>
 	<td class="name highlightable">{{p.full_name}}</td>
 	<td class="email highlightable">{{p.primary_email}}</td>
 	<td class="phone_number highlightable">{{p.primary_phone_number}}</td>
 </tr>
 {% endfor %}
-	<tr><td colspan="2">
+	<tr><td colspan="5" class="pagination_row">
 		{% paginate %}
 	</td></tr>
 </table>
 {% else %}
 <div class="no_people_found">
-	No people found for search "{{q}}".
+{% if q %}
+No people found for search "{{q}}".
+{% else %}
+{# Search for a person, or add a new person to GoodCloud. #}
+{% endif %}
 </div>
 {% endif %}
-<a href="#" class="mycelium_btn select_person_to_add_btn">Add a Person who's not in GoodCloud</a>
+<a href="#" class="mycelium_btn mycelium_grey cancel_add_btn">Cancel</a>
+<a href="#" class="mycelium_btn not_in_goodcloud_btn">Add a Person who's not in GoodCloud</a>
